fixes overflow

--- a/components/contract_marquee/index.styl
+++ b/components/contract_marquee/index.styl
@@ -1,5 +1,6 @@
 .contract-ticker
   height 40vh
+  overflow hidden
 
 .marquee-rtl--contract-ticker
   line-height 40vh
